// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should display a help message when there is less than 2 characters 1`] = `
<div
  className="search-box"
>
  <button
    className="search-box-submit button-clean"
  >
    <i
      className="icon-search"
    />
  </button>
  <input
    autoComplete="off"
    className="search-box-input touched"
    onChange={[Function]}
    placeholder="search_verb"
    type="search"
    value="f"
  />
  <span
    className="note spacer-left text-middle"
  >
    select2.tooShort.2
  </span>
</div>
`;

exports[`should render correctly 1`] = `
<div
  className="search-box test"
>
  <button
    className="search-box-submit button-clean"
  >
    <i
      className="icon-search"
    />
  </button>
  <input
    autoComplete="off"
    className="search-box-input"
    onChange={[Function]}
    placeholder="search_verb"
    type="search"
    value=""
  />
  <span
    className="note spacer-left text-middle"
  >
    select2.tooShort.2
  </span>
</div>
`;

exports[`should render correctly 2`] = `
<div
  className="search-box test"
>
  <button
    className="search-box-submit button-clean"
  >
    <i
      className="icon-search"
    />
  </button>
  <input
    autoComplete="off"
    className="search-box-input"
    onChange={[Function]}
    placeholder="search_verb"
    type="search"
    value="foo"
  />
  <span
    className="note spacer-left text-middle"
  >
    select2.tooShort.2
  </span>
</div>
`;
